fix 1024-1250px view. Elements overlaped

--- a/css/styles.css
+++ b/css/styles.css
@@ -380,7 +380,7 @@ button:focus {
   }
   .hero__text {
     grid-row: 1 / span 1;
-    padding: 90px 0;
+    padding: 88px 0;
   }
   .hero__title {
     padding: 10px 20px 10px 60px;
@@ -473,25 +473,22 @@ button:focus {
   }
   /* HERO */
   .hero__text {
-    grid-template-rows: 3fr 1fr 1fr;
+    grid-template-rows: 300px 80px 80px;
     justify-content: start;
-    padding: 90px 30px 90px 90px;
+    padding: 117px 30px 0 118px;
   }
   .hero__title {
     font-weight: 800;
-    font-size: 72px;
+    font-size: 4.5rem;
     line-height: 98px;
-    padding-top: 100px;
-    padding-left: 24px;
+    padding: 0;
   }
   .hero__discover {
-    padding-left: 20px;
-    margin-top: -200px;
+    padding: 0;
   }
   .hero__paragraph {
     font-size: 1.25rem;
-    margin-top: -100px;
-    padding-left: 24px;
+    padding: 0;
   }
   /* FOOTER */
   .footer {
